-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Service Arch 2022-09-05, Service Arch 2022-09-19
-
8
-
None
-
None
-
None
-
None
-
None
-
None
-
None
src/mongo/db/modules/enterprise/jstests/audit/impersonated_user_metadata_edge_cases.js
[j0:prim] /opt/mongodbtoolchain/revisions/c6da1cf7f0b4b60d53566305e59857d3d540dcf7/stow/gcc-v3.IGP/include/c++/8.5.0/debug/safe_iterator.h:165:
[j0:prim] Error: attempt to copy-construct an iterator from a singular iterator.
[j0:prim]
[j0:prim] Objects involved in the operation:
[j0:prim] iterator "this" @ 0x0x7f3d381781f8
[j0:prim] iterator "other" @ 0x0x7f3cf80bce80
{ [j0:prim] type = __gnu_debug::_Safe_iterator<std::_Rb_tree_iterator<std::pair<mongo::repl::OpTime const, std::shared_ptr<mongo::WaitForMajorityService::Request> > >, std::__debug::multimap<mongo::repl::OpTime, std::shared_ptr<mongo::WaitForMajorityService::Request>, std::less<mongo::repl::OpTime>, std::allocator<std::pair<mongo::repl::OpTime const, std::shared_ptr<mongo::WaitForMajorityService::Request> > > > > (mutable iterator); [j0:prim] state = singular; [j0:prim] references sequence with type 'std::__debug::multimap<mongo::repl::OpTime, std::shared_ptr<mongo::WaitForMajorityService::Request>, std::less<mongo::repl::OpTime>, std::allocator<std::pair<mongo::repl::OpTime const, std::shared_ptr<mongo::WaitForMajorityService::Request> > > >' @ 0x0x55cc9a4aa6b8 [j0:prim] }[j0:prim] {"t":
{"$date":"2022-07-22T05:29:47.188+00:00"},"s":"F", "c":"CONTROL", "id":6384300, "ctx":"SignalHandler","msg":"Writing fatal message","attr":{"message":"Got signal: 6 (Aborted).\n"}}