SERVER-68240 Fix iterator race condition in WaitForMajorityService